--- a/Study_API/Base.lproj/Main.storyboard
+++ b/Study_API/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ArticleCell" rowHeight="52" id="C5t-63-V9A">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ArticleCell" rowHeight="52" id="C5t-63-V9A" customClass="ArticleCell" customModule="Study_API" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="44.5" width="414" height="52"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="C5t-63-V9A" id="jqE-Tw-rpa">
@@ -42,6 +42,10 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="headLineImage" destination="xxN-cv-Zsb" id="ILW-f0-ehd"/>
+                                            <outlet property="headLineText" destination="yKQ-7R-wzm" id="mJg-g4-hyX"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
