--- a/Study_API/Base.lproj/Main.storyboard
+++ b/Study_API/Base.lproj/Main.storyboard
@@ -22,28 +22,32 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ArticleCell" rowHeight="52" id="C5t-63-V9A" customClass="ArticleCell" customModule="Study_API" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="52"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ArticleCell" rowHeight="100" id="C5t-63-V9A" customClass="ArticleCell" customModule="Study_API" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="C5t-63-V9A" id="jqE-Tw-rpa">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="52"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xxN-cv-Zsb">
-                                                    <rect key="frame" x="289" y="0.0" width="125" height="52"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yKQ-7R-wzm">
-                                                    <rect key="frame" x="34" y="15" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yKQ-7R-wzm">
+                                                    <rect key="frame" x="34" y="39" width="41.5" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wGC-U0-Pfw">
+                                                    <rect key="frame" x="265" y="0.0" width="149" height="100"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="yKQ-7R-wzm" secondAttribute="bottom" constant="29" id="9KD-br-ktF"/>
+                                                <constraint firstItem="yKQ-7R-wzm" firstAttribute="top" secondItem="jqE-Tw-rpa" secondAttribute="topMargin" constant="28" id="kVM-ZE-TVu"/>
+                                                <constraint firstItem="yKQ-7R-wzm" firstAttribute="leading" secondItem="jqE-Tw-rpa" secondAttribute="leadingMargin" constant="14" id="kZp-cM-Anj"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="headLineImage" destination="xxN-cv-Zsb" id="ILW-f0-ehd"/>
+                                            <outlet property="headLineImage" destination="wGC-U0-Pfw" id="fXS-iJ-f1f"/>
                                             <outlet property="headLineText" destination="yKQ-7R-wzm" id="mJg-g4-hyX"/>
                                         </connections>
                                     </tableViewCell>
