--- a/Study_API/Base.lproj/Main.storyboard
+++ b/Study_API/Base.lproj/Main.storyboard
@@ -29,21 +29,27 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yKQ-7R-wzm">
-                                                    <rect key="frame" x="34" y="39" width="41.5" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yKQ-7R-wzm">
+                                                    <rect key="frame" x="34" y="39" width="216" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wGC-U0-Pfw">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wGC-U0-Pfw">
                                                     <rect key="frame" x="265" y="0.0" width="149" height="100"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="149" id="nlt-aE-qts"/>
+                                                    </constraints>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="bottomMargin" secondItem="yKQ-7R-wzm" secondAttribute="bottom" constant="29" id="9KD-br-ktF"/>
+                                                <constraint firstItem="wGC-U0-Pfw" firstAttribute="top" secondItem="jqE-Tw-rpa" secondAttribute="top" id="aav-GO-G29"/>
+                                                <constraint firstAttribute="trailing" secondItem="wGC-U0-Pfw" secondAttribute="trailing" id="bEv-Gz-vwX"/>
+                                                <constraint firstItem="wGC-U0-Pfw" firstAttribute="leading" secondItem="yKQ-7R-wzm" secondAttribute="trailing" constant="15" id="dQ9-Ej-BQA"/>
                                                 <constraint firstItem="yKQ-7R-wzm" firstAttribute="top" secondItem="jqE-Tw-rpa" secondAttribute="topMargin" constant="28" id="kVM-ZE-TVu"/>
                                                 <constraint firstItem="yKQ-7R-wzm" firstAttribute="leading" secondItem="jqE-Tw-rpa" secondAttribute="leadingMargin" constant="14" id="kZp-cM-Anj"/>
+                                                <constraint firstAttribute="bottom" secondItem="wGC-U0-Pfw" secondAttribute="bottom" id="vvh-Qe-WAv"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
